--- a/dev/scss/pages/blog.scss
+++ b/dev/scss/pages/blog.scss
@@ -119,8 +119,6 @@
                     
                     .jssocials-shares {
                         display: flex;
-                        justify-content: space-between;
-                        background: red;
                     }
                     
                 }
@@ -257,8 +255,9 @@
 
 .jssocials-share {
     a {
-        width: 30px;
-        height: 30px;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
         display: flex;
         justify-content: center;
         align-items: center;
