--- a/dev/scss/utils/variaveis.scss
+++ b/dev/scss/utils/variaveis.scss
@@ -13,3 +13,5 @@ $grey-background: #e6e9ee;
 $input-border-color: #d9d9d9;
 
 $green-background: #defde9;
+
+$list-color: #beb9b0;
